kubernetes/apps/external-services/nextcloud/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.11
    ports:
      - name: http
        port: 10020
        protocol: TCP
