kubernetes/apps/external-services/nextcloud/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: external-services
spec:
  ports:
    - name: http
      port: 9001
  type: ClusterIP
